<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!--  APP VERSION For some reason these don't work in The Manifest-->
    <integer name="app_versionCode">14</integer> 
    <string name="app_versionName">2.0.1.0</string>
    
    <!-- GOOGLE ANALYTICS CODE -->
    <string name="ga_api_key">UA-35282082-1</string> 
    <bool name="ga_debug">false</bool>		<!-- TRUE Prints analytics to LogCat -->
    <bool name="ga_dryrun">false</bool>  	<!-- TRUE Does not transmit to Google -->
    
  	<!--  APP GLOBALS -->
    <string name="hello">This is GoVRE</string>  
    <string name="app_name">GoVRE</string> 
    <string name="set_preferences">Preferences</string>
    
    <!-- (PRODUCTION) GOOGLE MAPS API KEY --> 
    <string name="MapApiKey">00DcWlIURzMolsC8v0Jikwg0gT0zOoPMOKIxZ4A</string>
    
    <!-- (DEVELOPMENT)  GTFS URLs -->  
    
    <!--<string name="GTFSVehiclePositionFeed">http://192.168.1.111:9090/VRE/gtfs-realtime/VehiclePositionFeed6am.txt</string>-->
    <!--<string name="GTFSTripUpdateFeed">http://192.168.1.111:9090/VRE/gtfs-realtime/TripUpdateFeed6am.txt</string>-->
  
    <!-- (PRODUCTION)  GTFS URLs  --> 
    <string name="GTFSVehiclePositionFeed">http://www.vre.org/gtfs-realtime/VehiclePositionFeed</string>
    <string name="GTFSTripUpdateFeed">http://www.vre.org/gtfs-realtime/TripUpdateFeed</string>
    <string name="GTFSCalendarDates">http://echo5bravo.com/api/calendardates</string>
    
    <!-- PROXY URLS -->
    <string name="urlEcho5BravoAlerts">http://echo5bravo.com/mobile/vrealert?appVersion=</string>
    <string name="urlEcho5BravoGuide">http://echo5bravo.com/mobile/landing</string>
	<string name="urlVREAlers">http://www.vre.org/vremap/app?action=showstat</string>
	<string name="urlVREImgMap">http://www.vre.org/vremap/app?action=ovmap</string>
	<string name="urlTwitterFeed">http://search.twitter.com/search.json</string>
            
    <!--  ABOUT THE APP -->
    <string name="about">About</string>
    <string name="author">Jason Brannon</string>
    <string name="license">Commercial License</string>
    <string name="about_text">Provide near real-time Virginia Railway Express station departure times.</string>
    <string name="website">echo5bravo</string>
    <string name="website_url">http://echo5bravo.com</string>
    <string name="issues">http://echo5bravo.com/support</string>
     
    <!--  ON EXIT CONFIRMATION MESSAGE -->
    <string name="quit">Just Checking</string>
    <string name="really_quit">Are you sure you would like to close GoVRE?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- VEHICLE MENU OPTIONS -->    
    <string-array name="station_menu_options">    
		<item>Flag as Favorite</item>		
		<item>Un-flag as Favorite</item>
	</string-array>
	
    <!--  ICONS -->
    <string name="govre">GoVRE Anroid Mobile Application</string>
    <string name="alert">Alerts</string>
    <string name="twitter">Twitter Alerts</string>
    <string name="map">Train Map</string>
    <string name="nosignal">No Signal</string>
    <string name="sched">Schedule</string>
    
      <!-- SUB TITLES -->
    <string name="stationactivitySubTitle">VRE Stations</string>
    
    <!--  APP MESSAGES -->
    <string name="task_cancelled">Update Canceled</string>
    <string name="task_completed">Update Complete</string> 
    <string name="task_starting">Update Started</string>
    <string name="task_working">Update Processing</string>  
    <string name="task_download_alerts">Download www.VRE.org</string> 
    <string name="task_download_e5b_alerts">Download echo5bravo.com</string>   
    <string name="task_no_signal">No signal or connection disrupted...;</string>  
    
    <!--  MAP ICON DESCRIPTIONS -->
    <string name="map_ontime">Train On-Time</string>
    <string name="map_delay">Train Delayed</string>
    <string name="map_lost">Lost Communications</string>
    
    <string name="loading">Loading...;</string>
    
    <!--  ActivityTrainMap MENU -->
    <string name="menu_zoom">Zoom</string>
    <string name="menu_pan">Pan</string>
    <string name="menu_reset">Reset</string>
    
    <!-- TRAIN RAIL MENU OPTIONS -->    
    <string-array name="menu_train_line">
    	<item>Fredericksburg (RED)</item>
		<item>Manassas (BLUE)</item>
		<item>View All</item>
	</string-array>
	
    <!-- 2 = FBG, 4 = MSS, 3 = BOTH -->
    <string-array name="menu_train_values">
    	<item>FBG,ALL</item>
		<item>MSS,ALL</item>
		<item>FBG,ALL,MSS</item>
	</string-array>
	
      <!-- MAP TYPE OPTIONS -->    
    <string-array name="menu_map_type">
    	<item>Hybrid</item>
		<item>Normal</item>
		<item>Satellite</item>
		<item>Terrain</item>
	</string-array>
	
    <string-array name="menu_map_type_values">
    	<item>MAP_TYPE_HYBRID</item>
		<item>MAP_TYPE_NORMAL</item>
		<item>MAP_TYPE_SATELLITE</item>
		<item>MAP_TYPE_TERRAIN</item>	
	</string-array>
	
    
    <!-- TRAIN RAIL SORT OPTIONS -->    
    <string-array name="menu_train_line_sort">
    	<item>Proximity</item>
		<item>Train Stop Order</item>
		<item>Station Name</item>
	</string-array>
	
    <string-array name="menu_train_sort_values">
    	<item>proximity</item>
		<item>order</item>	
		<item>name</item>	
	</string-array>
	
    <!-- TRAIN TIME ADJUSTMENTS -->    
    <string-array name="menu_time_adjustment">
    	<item>+5 minutes</item>
		<item>+4 minutes</item>
		<item>+3 minutes</item>
		<item>+2 minutes</item>
		<item>+1 minute</item>
		<item>0 minute</item>
		<item>-1 minute</item>
		<item>-2 minutes</item>
		<item>-3 minutes</item>
		<item>-4 minutes</item>
		<item>-5 minutes</item>
	</string-array>
	
    <string-array name="menu_time_adjustment_values">
    	<item>5</item>
		<item>4</item>
		<item>3</item>
		<item>2</item>
		<item>1</item>
		<item>0 minute</item>
		<item>-1</item>
		<item>-2</item>
		<item>-3</item>
		<item>-4</item>
		<item>-5</item>	
	</string-array>
	
    <!-- TWITTER FEED PREF -->    
    <string-array name="menu_tweet_count">
    	<item>5 Tweets</item>
		<item>10 Tweets</item>
		<item>15 Tweets</item>
		<item>20 Tweets</item>
		<item>25 Tweets</item>
		<item>30 Tweets</item>
	</string-array>
	
    <string-array name="menu_tweet_count_values">
    	<item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>25</item>
		<item>30</item>	
	</string-array>
	
    <!-- GTFS Refresh Frequency -->    
    <string-array name="menu_gtfs_refresh_frequency">
    	<item>Monthly</item>
		<item>Weekly</item>
		<item>Daily</item>
		<item>30 min (For Bad Weather)</item>
	</string-array>
	
    <!-- Values are stored in MINUTES -->
    <string-array name="menu_gtfs_refresh_frequency_values">
    	<item>43829</item>
		<item>10080</item>
		<item>1440</item>
		<item>30</item>		
	</string-array>
	
     <!-- VRE GOOGLE MAP PREF -->    
    <string-array name="menu_station_marker">
    	<item>Abbreviation</item>
		<item>Simple Dot</item>
	</string-array>
	
    <string-array name="menu_station_marker_values">
    	<item>abbv</item>
		<item>simple</item>	
	</string-array>
	
    <!-- GLOBALS PREF -->    
    <string-array name="menu_time_format">
    	<item>12 Hour</item>
		<item>24 Hour</item>
	</string-array>
	
    <string-array name="menu_time_format_values">
    	<item>12</item>
		<item>24</item>	
	</string-array>
	
    <!-- TWITTER FEED PREF -->    
    <string-array name="menu_tweet_follow">
    	<item>VRE (@VaRailXpress)</item>
		<item>Any VRE Tweet</item>
	</string-array>
	
    <string-array name="menu_tweet_follow_values">
    	<item>VRE</item>
		<item>ALL</item>
	</string-array>
	
</resources>