<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:baselineAligned="false"
	style="?pageBackground">	
	
     <LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:baselineAligned="false">
	
		
				<!-- HEADER 1 GRAPHIC --> 
				<ImageView 
					android:layout_height="wrap_content"   
					android:layout_width="wrap_content" 
					android:id="@+id/imgVRE" 						    	
					android:src="@drawable/govre_logo"
					android:contentDescription="@string/govre"
					android:paddingBottom="5dp"
					android:paddingTop="0dp"
					>
				</ImageView> 
				
				 <LinearLayout
					android:orientation="horizontal" 
					android:layout_width="fill_parent" 
					android:layout_height="50dp" 
					android:gravity="right"
					>
					
				     <!-- SCHEDULE -->
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content" 
						android:id="@+id/imgSched" 						    	
						android:src="@drawable/sched"	
						android:contentDescription="@string/sched"				
						android:paddingLeft="23dp"
						android:paddingTop="10dp">
					</ImageView>
					
				     <!-- ALERTS -->
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content" 
						android:id="@+id/imgAlerts" 						    	
						android:src="@drawable/alerts"	
						android:contentDescription="@string/alert"				
						android:paddingLeft="23dp"
						android:paddingTop="10dp">
					</ImageView>
					
					 <!-- MAP -->
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content"   
						android:id="@+id/imgMap" 						    	
						android:src="@drawable/map"					 
						android:contentDescription="@string/map"		
						android:paddingLeft="23dp"
						android:paddingTop="10dp">				
					</ImageView>
			
					 <!-- TWITTER --> 
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content"  
						android:id="@+id/imgTwitter" 						    	
						android:src="@drawable/twitter_grayscale"	 				
						android:contentDescription="@string/twitter"		
						android:paddingLeft="23dp"
						android:paddingRight="12dp"
						android:paddingTop="10dp">				
					</ImageView>
				</LinearLayout>
	</LinearLayout>
	<!-- STYLE BOARDER AROUND LIST VIEW -->
	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		style="?whiteBackground">
	
				
		<!-- THE LIST VIEW -->
		<ListView			
			android:id="@+id/TwitterListView"
			style="?listviewStyle"
        	android:layout_weight="1"
        	android:layout_width="fill_parent"
			android:layout_height="fill_parent"				
			/> 	
			
		<!-- CUSTOM PROGRESS SPINNER -->
		<ImageView
		  	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="1dp"
			android:gravity="center"
       		android:background="@drawable/loading"
			android:contentDescription="@string/loading"
			android:id="@+id/splashSpinner"/>	
			
		<!-- NO SIGNAL GRAPHIC --> 
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="1dp"
			android:gravity="center" 
			android:id="@+id/imgNoSignal" 						    	
			android:src="@drawable/no_signal"
			android:contentDescription="@string/nosignal"
			android:paddingBottom="5dp"/>	

	
	</RelativeLayout>
 </LinearLayout>

