<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- This can go anywhere in your layout (see other demos for some examples). -->


<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:baselineAligned="false"
	style="?pageBackground">	
	
     <LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:baselineAligned="false">
	
		
				<!-- HEADER 1 GRAPHIC --> 
				<ImageView 
					android:layout_height="wrap_content"   
					android:layout_width="wrap_content" 
					android:id="@+id/imgVRE" 						    	
					android:src="@drawable/govre_logo"
					android:contentDescription="@string/govre"
					android:paddingBottom="5dp"
					android:paddingTop="0dp"
					>
				</ImageView> 
				
				 <LinearLayout
					android:orientation="horizontal" 
					android:layout_width="fill_parent" 
					android:layout_height="50dp" 
					android:gravity="right"
					>
					
				      <!-- SCHEDULE -->
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content" 
						android:id="@+id/imgSched" 						    	
						android:src="@drawable/sched"	
						android:contentDescription="@string/sched"				
						android:paddingLeft="23dp"
						android:paddingTop="10dp">
					</ImageView>
					
				     <!-- ALERTS -->
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content" 
						android:id="@+id/imgAlerts" 						    	
						android:src="@drawable/alerts"	
						android:contentDescription="@string/alert"				
						android:paddingLeft="23dp"
						android:paddingTop="10dp">
					</ImageView>
					
					 <!-- MAP -->
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content"   
						android:id="@+id/imgMap" 						    	
						android:src="@drawable/map_grayscale"					 
						android:contentDescription="@string/map"		
						android:paddingLeft="23dp"
						android:paddingTop="10dp">				
					</ImageView>
			
					 <!-- TWITTER --> 
					 <ImageView 
						android:layout_height="wrap_content" 
						android:layout_width="wrap_content"  
						android:id="@+id/imgTwitter" 						    	
						android:src="@drawable/twitter"	 				
						android:contentDescription="@string/twitter"		
						android:paddingLeft="23dp"
						android:paddingRight="12dp"
						android:paddingTop="10dp">				
					</ImageView>
				</LinearLayout>
	</LinearLayout>
	<!-- STYLE BOARDER AROUND LIST VIEW -->
	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		style="?whiteBackground">
	
				
		<!-- GOOGLE MAP API V2-->
		<fragment 
  		android:id="@+id/map"
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
  		class="com.google.android.gms.maps.SupportMapFragment"/>	
			
		<!-- CUSTOM PROGRESS SPINNER -->
		<ImageView
		  	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="1dp"
			android:gravity="center"
       		android:background="@drawable/loading"
			android:contentDescription="@string/loading"
			android:id="@+id/splashSpinner"/>
		
		<TextView
           android:id="@+id/txtrefresh"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:text="Loading..." 
           android:textColor="@color/white"
           android:textSize="14dip"
           android:background="@drawable/rounded_corners"  />
		<TextView
           android:id="@+id/txtarrivals"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"          
           android:textColor="@color/white"
           android:textSize="14dip"      
           android:layout_alignParentRight="true"
		   android:layout_alignParentTop="true"
		   android:background="@drawable/rounded_corners" />		
		<ImageView
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
		    android:layout_alignParentBottom="true"
			android:layout_margin="1dp"
			android:gravity="center"   
			android:layout_marginBottom="100dip"    		
			android:contentDescription="@string/loading"
			android:src="@drawable/echo5bravo_logo_gray"	
			android:id="@+id/imgecho5bravologogray"/>	
			
		<!-- NO SIGNAL GRAPHIC --> 
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="1dp"
			android:gravity="center" 
			android:id="@+id/imgNoSignal" 						    	
			android:src="@drawable/no_signal"
			android:contentDescription="@string/nosignal"
			android:paddingBottom="5dp"/>	

	
	</RelativeLayout>
 </LinearLayout>